--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-
+<html>
+  <head>
+    <title>EcoBOT</title>
+    <link rel='icon' href='images/online.ico' type='image/x-icon'/>
+    <style>
+      body {
+       font-family: sans-serif; 
+      }
+  </head>
+  <body>
+    <h1>EcoBOT</h1>
+    <img src='images/online.ico' alt='EcoBOT Logo/>
+  </body>
+</html>
