--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
     </style>
   </head>
   <body>
-    <h1>EcoBOT</h1>
-    <img src='images/online.ico' alt='EcoBOT Logo/>
+    <p align='center' style='font-size:60px;'><strong>EcoBOT</strong></p>
+    EcoBOT is a bot made by HaroonGames#2334. It can help you with your server in many ways, like:
+    <ul>
+      <li>Make giveaways for you!</li>
+      <li>Take moderation actions!</li>
+      <li>Announce something for you!</li>
+      <li>Pretend to hack your friends!</li>
+    </ul>
+    <strong> AND MORE! </strong>
+    So why don't you invite him today!
   </body>
 </html>
