--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <link rel='icon' href='images/online.ico' type='image/x-icon'/>
     <style>
       body {
-       font-family: sans-serif; 
+       font-family: sans-serif;
+       align: center;
       }
     </style>
   </head>
