--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
       body {
        font-family: sans-serif;
-       align: center;
+       text-align: center;
       }
     </style>
   </head>
