--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
        font-family: sans-serif;
        text-align: center;
       }
+      ul.center {
+       float: left; 
+      }
     </style>
   </head>
   <body>
     <p align='center' style='font-size:60px;'><strong>EcoBOT</strong></p>
     EcoBOT is a bot made by HaroonGames#2334. It can help you with your server in many ways, like:
-    <ul>
+    <ul class='center'>
       <li>Make giveaways for you!</li>
       <li>Take moderation actions!</li>
       <li>Announce something for you!</li>
