--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
        text-align: center;
       }
       ul.center {
-       float: left; 
+       float: right; 
       }
     </style>
   </head>
