And now import that stylesheet :smile:

--- a/index.html
+++ b/index.html
@@ -2,15 +2,7 @@
   <head>
     <title>EcoBOT</title>
     <link rel='icon' href='images/online.ico' type='image/x-icon'/>
-    <style>
-      body {
-       font-family: sans-serif;
-       text-align: center;
-      }
-      ul.remove-bullets { 
-        list-style-type: none;
-      }
-    </style>
+    <link rel='stylesheet' href='styling.css' type='text/css'/>
   </head>
   <body>
     <p align='center' style='font-size:60px;'><strong>EcoBOT</strong></p>
