Add edits made by DevChrisChan

--- a/index.html
+++ b/index.html
@@ -1,19 +1,31 @@
 <html>
-  <head>
-    <title>EcoBOT</title>
-    <link rel='icon' href='images/online.ico' type='image/x-icon'/>
-    <link rel='stylesheet' href='styling.css' type='text/css'/>
-  </head>
-  <body>
-    <p align='center' style='font-size:60px;'><strong>EcoBOT</strong></p>
-    EcoBOT is a bot made by HaroonGames#2334. It can help you with your server in many ways, like:
-    <ul class='remove-bullets'>
-      <li>Make giveaways for you!</li>
-      <li>Take moderation actions!</li>
-      <li>Announce something for you!</li>
-      <li>Pretend to hack your friends!</li>
-    </ul>
-    <strong> AND MORE! </strong>
-    So why don't you invite him today!
-  </body>
-</html>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kognise/water.css@latest/dist/light.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
+  <link rel="stylesheet" href="styling.css" type='text/css'>
+  <link rel='icon' href='images/online.ico' type='image/x-icon'>
+  <title>EcoBOT</title>  
+</head>
+  
+<body>
+	
+	<h1>EcoBOT</h1>
+	<h2><EcoBOT is a bot made by HaroonGames#2334. It can help you with your server in many ways, like:</h2></center>
+  <ul class='remove-bullets'>
+  <li> Make giveaways for you! </li>
+  <li> Make giveaways for you! </li>
+  <li> Take moderation actions! </li>
+  <li> Announce something for you! </li>
+  <li> Pretend to hack your friends! </li>
+  </ul>
+<div>
+<strong>AND MORE!</strong> So why don't you invite him today!
+  
+  
+
+
+  
+<h1>&nbsp;</h1>
