fix a silly mistake

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 	
 	<h1>EcoBOT</h1>
-	<h2><EcoBOT is a bot made by HaroonGames#2334. It can help you with your server in many ways, like:</h2></center>
+	<h2>EcoBOT is a bot made by HaroonGames#2334. It can help you with your server in many ways, like:</h2>
   <ul class='remove-bullets'>
   <li> Make giveaways for you! </li>
   <li> Make giveaways for you! </li>
