--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
   </ul>
 <div>
 <strong>AND MORE!</strong> So why don't you invite him today!
-  
+<h1>&nbsp;</h1>
+Please become a patreon! <a href="https://www.patreon.com/bePatron?u=28762660" data-patreon-widget-type="become-patron-button">Become a Patron!</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>
   
 
 
