--- a/index.html
+++ b/index.html
@@ -30,3 +30,11 @@ Please become a patreon! <a href="https://www.patreon.com/bePatron?u=28762660" d
 
   
 <h1>&nbsp;</h1>
+<script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer>
+  new Crate({
+    server: '649355782185418772',
+    channel: '737276317132783618'
+  })
+</script>
+	</body>
+	</html>
