added changes dont worry

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kognise/water.css@latest/dist/light.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
   <link rel="stylesheet" href="styling.css" type='text/css'>
+  <script type="text/javascript" src="discord-stuff.js"> </script>
   <link rel='icon' href='images/online.ico' type='image/x-icon'>
   <title>EcoBOT</title>  
 </head>
